--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header>
@@ -38,7 +41,7 @@
           </nav>
           <!-- image slider -->
 
-             <section class="container bg-info bg-gradient rounded">
+             <section class="container panda-bg bg-gradient rounded">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -206,11 +209,11 @@
               </div>
             </section>
             <section class="my-5" id="subscribe">
-              <div style="height: 300px;" class="container bg-info rounded-3 d-flex justify-content-center align-items-center ">
+              <div style="height: 300px;" class="container panda-bg rounded-3 d-flex justify-content-center align-items-center ">
                 <div >
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales specials and more</p>
-                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Email" required>
                 <br>
                 <button type="button" class="btn btn-warning">Buy Now</button>
                 </div>
